--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                         <li>প্রাপক নম্বর হিসেবে এই নম্বরটি লিখুন: <strong>01719563112</strong> <button class="copy-btn" data-copy="01719563112"><i class="fas fa-copy"></i> কপি</button></li>
                         <li>টাকার পরিমাণ: <strong id="payment-amount">30 BDT</strong></li>
                         <li>নিশ্চিত করতে এখন আপনার bKash পিন লিখুন।</li>
-                        <li>এখন উপরের বক্সে আপনার Transaction ID দিন এবং নিচের Verify বাটনে ক্লিক করুন।</li>
+                        <li>এখন নিচের বক্সে আপনার Transaction ID দিন এবং নিচের Verify Payment বাটনে ক্লিক করুন।</li>
                     </ul>
                 `
             },
@@ -727,7 +727,7 @@
                         <li>প্রাপক নম্বর হিসেবে এই নম্বরটি লিখুন: <strong>01781993264</strong> <button class="copy-btn" data-copy="01781993264"><i class="fas fa-copy"></i> কপি</button></li>
                         <li>টাকার পরিমাণ: <strong id="payment-amount">30 BDT</strong></li>
                         <li>নিশ্চিত করতে এখন আপনার Nagad পিন লিখুন।</li>
-                        <li>এখন উপরের বক্সে আপনার Transaction ID দিন এবং নিচের Verify বাটনে ক্লিক করুন।</li>
+                        <li>এখন নিচের বক্সে আপনার Transaction ID দিন এবং নিচের Verify Payment বাটনে ক্লিক করুন।</li>
                     </ul>
                 `
             },
@@ -740,7 +740,7 @@
                         <li>প্রাপক নম্বর হিসেবে এই নম্বরটি লিখুন: <strong>01719563112</strong> <button class="copy-btn" data-copy="01719563112"><i class="fas fa-copy"></i> কপি</button></li>
                         <li>টাকার পরিমাণ: <strong id="payment-amount">30 BDT</strong></li>
                         <li>নিশ্চিত করতে এখন আপনার Rocket পিন লিখুন।</li>
-                        <li>এখন উপরের বক্সে আপনার Transaction ID দিন এবং নিচের Verify বাটনে ক্লিক করুন।</li>
+                        <li>এখন নিচের বক্সে আপনার Transaction ID দিন এবং নিচের Verify Payment বাটনে ক্লিক করুন।</li>
                     </ul>
                 `
             }
