--- a/index.html
+++ b/index.html
@@ -642,8 +642,9 @@
             </div>
             <h3>Payment Verified!</h3>
             <div id="popup-order-id" style="font-weight: 600; margin-bottom: 15px; color: var(--primary);"></div>
-            <p>Your payment has been successfully verified and your account is being activated.</p>
-            <p>You will receive your access credentials shortly via SMS and email.</p>
+            <p>Your order has been successfully received.</p>
+            <p>If the transaction ID is correct, your plan will be activated within 5 minutes to 5 hours.</p>
+             <pYou will receive a confirmation message via WhatsApp or email at your mobile number.</p>
             <button class="btn" id="close-popup">
                 <i class="fas fa-rocket"></i> Continue to Dashboard
             </button>
